--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "devicon": "^2.17.0",
+    "framer-motion": "^12.23.15",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
